; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/harfbuzz/test/api/extr_test-subset-cmap.c_main.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/harfbuzz/test/api/extr_test-subset-cmap.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@test_subset_cmap = common dso_local global i32 0, align 4
@test_subset_cmap_noop = common dso_local global i32 0, align 4
@test_subset_cmap_non_consecutive_glyphs = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = call i32 @hb_test_init(i32* %4, i8*** %5)
  %7 = load i32, i32* @test_subset_cmap, align 4
  %8 = call i32 @hb_test_add(i32 %7)
  %9 = load i32, i32* @test_subset_cmap_noop, align 4
  %10 = call i32 @hb_test_add(i32 %9)
  %11 = load i32, i32* @test_subset_cmap_non_consecutive_glyphs, align 4
  %12 = call i32 @hb_test_add(i32 %11)
  %13 = call i32 (...) @hb_test_run()
  ret i32 %13
}

declare dso_local i32 @hb_test_init(i32*, i8***) #1

declare dso_local i32 @hb_test_add(i32) #1

declare dso_local i32 @hb_test_run(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
